[package]
name = "urban-rs"
version = "0.1.1"
authors = ["Aurora <programming.aurora@gmail.com>"]
edition = "2018"
description = "An API library to interract with Urban Dictionary."
license = "MIT"
repository = "https://github.com/Aurora2500/urban-rs"
documentation = "https://docs.rs/urban-rs"
readme = "README.md"
keywords = ["API", "Urban"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
reqwest = { version = "0.10.8", features = ["json"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
